Support 2.3.6 server version