@@ -10,18 +10,18 @@ import RealmSwift
 import Swinject
 import SwinjectStoryboard
 import WallabagCommon
+import WallabagKit
 
+// swiftlint:disable function_body_length
 extension SwinjectStoryboard {
-    // swiftlint:disable function_body_length
-    @objc class func setup() {
-        defaultContainer.register(WallabagSetting.self) { _ in WallabagSetting() }.inObjectScope(.container)
+    class private func registerClass() {
         defaultContainer.register(AnalyticsManager.self) { _ in AnalyticsManager() }.inObjectScope(.container)
         defaultContainer.register(Realm.self) { _ in
             do {
                 let config = Realm.Configuration(
                     schemaVersion: 2,
                     migrationBlock: { _, _ in
-                    }
+                }
                 )
 
                 Realm.Configuration.defaultConfiguration = config
@@ -31,10 +31,20 @@ extension SwinjectStoryboard {
                 print(error)
                 fatalError("Error init realm")
             }
-        }.inObjectScope(.container)
+            }.inObjectScope(.container)
         defaultContainer.register(ThemeManager.self) { _ in
             ThemeManager(currentTheme: White())
-        }.inObjectScope(.container)
+            }.inObjectScope(.container)
+        defaultContainer.register(WallabagSetting.self) { _ in WallabagSetting() }.inObjectScope(.container)
+        defaultContainer.register(WallabagSession.self) { resolver in
+            guard let setting = resolver.resolve(WallabagSetting.self) else { fatalError() }
+            let session = WallabagSession(setting: setting)
+
+            return session
+            }.inObjectScope(.container)
+    }
+
+    class private func registerStoryboard() {
         defaultContainer.storyboardInitCompleted(AboutViewController.self) { resolver, controller in
             controller.analytics = resolver.resolve(AnalyticsManager.self)
             controller.themeManager = resolver.resolve(ThemeManager.self)
@@ -47,6 +57,8 @@ extension SwinjectStoryboard {
             controller.analytics = resolver.resolve(AnalyticsManager.self)
             controller.setting = resolver.resolve(WallabagSetting.self)
             controller.hapticNotification = UINotificationFeedbackGenerator()
+            controller.wallabagSync = resolver.resolve(WallabagSyncing.self)
+            controller.wallabagSession = resolver.resolve(WallabagSession.self)
             controller.realm = resolver.resolve(Realm.self)
         }
         defaultContainer.storyboardInitCompleted(ClientIdViewController.self) { resolver, controller in
@@ -60,6 +72,7 @@ extension SwinjectStoryboard {
         defaultContainer.storyboardInitCompleted(LoginViewController.self) { resolver, controller in
             controller.analytics = resolver.resolve(AnalyticsManager.self)
             controller.setting = resolver.resolve(WallabagSetting.self)
+            controller.wallabagSession = resolver.resolve(WallabagSession.self)
         }
         defaultContainer.storyboardInitCompleted(ServerViewController.self) { resolver, controller in
             controller.analytics = resolver.resolve(AnalyticsManager.self)
@@ -83,6 +96,12 @@ extension SwinjectStoryboard {
             controller.analytics = resolver.resolve(AnalyticsManager.self)
             controller.setting = resolver.resolve(WallabagSetting.self)
         }
+
         defaultContainer.storyboardInitCompleted(UINavigationController.self) { _, _ in }
+    }
+
+    @objc class func setup() {
+        registerClass()
+        registerStoryboard()
     }
 }
